# auto-zhipin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  a.html  alembic.ini  b.py  cspell.json  d.py  fastagent.config.yaml  job_eval.py  pyproject.toml  query.py  t.py  utils.py
auto_zhipin/: __main__.py  a.py  boss_zhipin.py  dashboard.py  db.py  deps.py  evaluator.py  llm.py  settings.py
auto_zhipin/assets/: CodeLazy.js  index.css  index.js
migrations/: env.py
migrations/versions/: d017ee4f7c57_add_cookie.py  d2c0bf6b2fb3_init.py  f7a11a8bc1ea_add_job_detail_interested_at.py
